<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mathText"
            style="@style/MathTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_space"
            android:text="2+3" />

        <TextView
            android:id="@+id/resultText"
            style="@style/ResultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/colorBgNumberButton"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/button7"
                    style="@style/NumberButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/button8"
                    style="@style/NumberButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/button9"
                    style="@style/NumberButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_9" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/button4"
                    style="@style/NumberButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/button5"
                    style="@style/NumberButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_5" />

                <Button
                    android:id="@+id/button6"
                    style="@style/NumberButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/button1"
                    style="@style/NumberButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/button2"
                    style="@style/NumberButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/button3"
                    style="@style/NumberButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/buttonDot"
                    style="@style/NumberButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dot" />

                <Button
                    android:id="@+id/button0"
                    style="@style/NumberButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/buttonEqual"
                    style="@style/NumberButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/equal_symbol" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBgOperator"
            android:orientation="vertical"
            android:weightSum="5">

            <Button
                android:id="@+id/buttonDel"
                style="@style/OperatorButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/del" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/OperatorButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/divide_symbol" />

            <Button
                android:id="@+id/buttonMultipli"
                style="@style/OperatorButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/multipli_symbol" />

            <Button
                android:id="@+id/buttonSub"
                style="@style/OperatorButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sub_symbol" />

            <Button
                android:id="@+id/buttonAdd"
                style="@style/OperatorButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/add_symbol" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
